--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+.fss-6{
+    font-size: 8px;
+}
+.fss-5{
+    font-size: 10px;
+}
+.fss-4{
+    font-size: 12px;
+}
+.fss-3{
+    font-size: 14px;
+}
+.fss-2{
+    font-size: 16px;
+}
+.fss-1{
+    font-size: 18px;
+}
